RESOLVED FIXED83000
REGRESSION(r80439): Crash in StylePropertySet::borderSpacingValue
https://bugs.webkit.org/show_bug.cgi?id=83000
Summary REGRESSION(r80439): Crash in StylePropertySet::borderSpacingValue
Ryosuke Niwa
Reported 2012-04-02 23:11:55 PDT
Reduction: <!DOCTYPE html> <body> <script type="text/javascript"> a = document.createElement("a"); a.setAttribute("style", "-webkit-border-horizontal-spacing:1px;"); a.style.getPropertyValue('border-spacing'); </script> http://crbug.com/121121
Attachments
Patch (4.20 KB, patch)
2012-04-02 23:52 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2012-04-02 23:18:51 PDT
Should specifying -webkit-border-horizontal-spacing also set -webkit-border-vertical-spacing to be consistent with the standard border-spacing property? (border-spacing doesn't allow only vertical spacing to be specified).
Ryosuke Niwa
Comment 2 2012-04-02 23:48:39 PDT
I'm going to submit a patch assuming that the answer to my question in comment #2 is no (i.e. we want to allow websites specifying border-spacing-vertical without border-spacing-horizontal).
Ryosuke Niwa
Comment 3 2012-04-02 23:52:07 PDT
Andreas Kling
Comment 4 2012-04-03 04:35:17 PDT
Comment on attachment 135282 [details] Patch Good find.
Andreas Kling
Comment 5 2012-04-03 04:36:16 PDT
(In reply to comment #2) > I'm going to submit a patch assuming that the answer to my question in comment #2 is no (i.e. we want to allow websites specifying border-spacing-vertical without border-spacing-horizontal). r=me as is to fix the crash. This question still needs an answer though.
Ryosuke Niwa
Comment 6 2012-04-03 09:26:27 PDT
I'm going to land this patch as is since we can always revert it if we want the other behavior instead. (In reply to comment #5) > (In reply to comment #2) > > I'm going to submit a patch assuming that the answer to my question in comment #2 is no (i.e. we want to allow websites specifying border-spacing-vertical without border-spacing-horizontal). > > r=me as is to fix the crash. This question still needs an answer though. Yes, please someone answer my question...
WebKit Review Bot
Comment 7 2012-04-03 09:52:47 PDT
Comment on attachment 135282 [details] Patch Clearing flags on attachment: 135282 Committed r113049: <http://trac.webkit.org/changeset/113049>
WebKit Review Bot
Comment 8 2012-04-03 09:52:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.