REGRESSION(r80439): Crash in StylePropertySet::borderSpacingValue https://bugs.webkit.org/show_bug.cgi?id=83000

Reviewed by Andreas Kling.

Source/WebCore:

Fixed the crash by exiting early in StylePropertySet::borderSpacingValue when
the vertical value is set.

Test: fast/css/border-spacing-without-vertical-value.html

* css/StylePropertySet.cpp:
(WebCore::StylePropertySet::borderSpacingValue):

LayoutTests:

Add a regression for obtaining the value of border-spacing without specifying
-webkit-horizontal-vertical.

* fast/css/border-spacing-without-vertical-value-expected.txt: Added.
* fast/css/border-spacing-without-vertical-value.html: Added.


Canonical link: https://commits.webkit.org/100405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113049 268f45cc-cd09-0410-ab3c-d52691b4dbfc